# experiment_on_picow

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  Changelog  DualShock4_on_picow.code-workspace  LICENSE  README.md  experiment_on_picow.code-workspace  main.cpp
.github/workflows/: Build_PicoSDK.yml  Build_Release.yml  Build_SampleUF2.yml  Create_ReleaseNote.yml
components/: CMakeLists.txt
components/logic/: CMakeLists.txt  logic.cpp  logic.h  logic.hpp
components/math/matrix/: CMakeLists.txt  eulerAngle.cpp  eulerAngle.h  quatanion.cpp  quaternion.h  rotationMatrix.cpp  rotationMatrix.h
components/network/UDP/: CMakeLists.txt  lwipopts.h  picow_udp.cpp  picow_udp.h
components/networking/UDP/: CMakeLists.txt  picow_udp.cpp  picow_udp.h
components/networking/UDP/OSC/: CMakeLists.txt
components/operate/: CMakeLists.txt  debounce.h
components/sensor/filter/: CMakeLists.txt  kalman.cpp  kalman.h
components/sensor/imu/: BMI055.h  CMakeLists.txt  calibrater.cpp  calibrater.h
components/servo/sg90/: CMakeLists.txt  sg90.cpp  sg90.h
debug/operate/: ds4_imu_tester.cpp  ds4_imu_tester.h  dummyinput.cpp  dummyinput.h  servo_drive_tester.cpp  servo_drive_tester.h
debug/plot/: serialplot.cpp  serialplot.h
lib/: CMakeLists.txt
lib/include/: btstack_config.h  ds4_on_pico_w.hpp  struct_ds4_on_pico_w.hpp
lib/interface/: Ids4state.h
lib/src/: ds4_on_pico_w.cpp
